# EBD_IPKVM

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  agents.md  bootstrap_repo.sh
Arduino/: README.md  platformio.ini
Arduino/include/: adb.h  instruction.h
Arduino/src/: adb.cpp  main.cpp
client_web/: README.md  pyproject.toml  requirements.txt
client_web/docs/: webapp_client_plan.md
client_web/src/ebd_ipkvm_web/: __init__.py  __main__.py  app.py
client_web/src/ebd_ipkvm_web/static/: index.html
docs/: PROJECT_STATE.md  adb_implementation_plan.md  compilecommands.txt  mac_classic_video_capture_notes.md  main.py  opt_reference_notes.md  trabular_spi_interface_guide.md
docs/agent/: README.md  audit_pr8.md  decisions.md  log.md  notes.md
docs/mac_classic_video_protocol/: README.md
docs/protocol/: adb.md  trabular_spi.md  udp_rle_stream.md  usb_cdc_stream.md
docs/reference/macfriends/MacFriends-macos/MacFriends.xcodeproj/: project.pbxproj
docs/reference/macfriends/MacFriends-macos/Source/: AppDelegate.swift  Window.swift
docs/reference/macfriends/MacFriends-macos/Source/Base.lproj/: Main.storyboard
docs/reference/macfriends/MacFriends-macos/Source/Extra/: CoreGraphics+Extensions.swift
docs/reference/macfriends/MacFriends-macos/Source/Models/: ADBInstruction.swift  KeyboardMessage.swift  MousePosition.swift
docs/reference/macfriends/MacFriends-macos/Source/Serial/: SerialError.swift  SerialTask.swift  SerialTaskDelegate.swift
hardware/: all connections so far.txt
scripts/: ab_capture.py  adbconsole.sh  build_flash.sh  cdc_cmd.py  debugconsole.sh  open_adb_console.sh  open_debug_console.sh  setup_opt_references.sh
src/: adb_bus.c  adb_bus.h  adb_bus.pio  adb_core.c  adb_core.h  adb_driver.c  adb_driver.h  adb_events.c  adb_events.h  adb_kbd.c  adb_kbd.h  adb_mouse.c  adb_mouse.h  adb_pio.c  adb_pio.h  adb_pio.pio  adb_queue.c  adb_queue.h  adb_spi.c  adb_spi.h  adb_test_cdc.c  adb_test_cdc.h  app_core.c  app_core.h  board_pins.h  classic_line.pio  core_bridge.c  core_bridge.h  diag_hid.c  diag_hid.h  gpio_irq_dispatch.c  gpio_irq_dispatch.h  host_recv_frames.py  host_recv_udp.py  lwipopts.h  main.c  portal.c  portal.h  stream_protocol.h  tusb_config.h  (+11 more)
(+10 files in other folders)
